# advent-of-code-2022

./: .gitattributes  Cargo.toml
data/: day8-full.txt
